solve spacing issues

--- a/src/assets/scss/partials/_whoweare.scss
+++ b/src/assets/scss/partials/_whoweare.scss
@@ -108,39 +108,48 @@ span {
     opacity: 0;
     animation: slide-up 0.7s ease-out forwards;
   }
+
   .animated-text-2 {
     opacity: 0;
     animation: slide-up 1.5s ease-out 1s forwards;
   }
+
   .animated-text-3 {
     opacity: 0;
     animation: slide-up 1.5s ease-out 1.5s forwards;
   }
+
   .animated-text-4 {
     opacity: 0;
     animation: slide-up 1.5s ease-out 2s forwards;
   }
+
   .animated-text-5 {
     opacity: 0;
     animation: slide-up 1.5s ease-out 2.5s forwards;
   }
+
   .animated-text-6 {
     opacity: 0;
     animation: slide-up 1.5s ease-out 3s forwards;
   }
+
   .animated-text-7 {
     opacity: 0;
     animation: slide-up 1.5s ease-out 3.5s forwards;
   }
+
   .animated-text-8 {
     opacity: 0;
     animation: slide-up 1.5s ease-out 4s forwards;
   }
+
   @keyframes slide-up {
     0% {
       opacity: 0;
       transform: translateY(100%);
     }
+
     100% {
       opacity: 1;
       transform: translateY(0%);
@@ -526,74 +535,133 @@ span {
 }
 
 
-@media only screen and (min-width : 1360px) and (max-width : 1440px) { 
+@media only screen and (min-width : 1440px) and (max-width : 1900px) {
 
   #added-value-across-section {
-      .added-value-across {
-          .TestMoinals_Container-2 {
-              .Explore_Cusomer_Offer_SubParentDiv {
-                  padding-left: 0.5rem !important;
-              }
-          }
-
-          h2 {
-              margin-left: 7px !important;
-          }
+    .added-value-across {
+      .TestMoinals_Container-2 {
+        .Explore_Cusomer_Offer_SubParentDiv {
+          padding-left: 0.5rem !important;
+        }
       }
+
+      h2 {
+        margin-left: 7px !important;
+      }
+    }
   }
 
   .quality-fuels-and-security-section {
-      .quality-fuels-and-security {
-          .Explore_Cusomer_Offer_firstDiv {
-              .Explore_Cusomer_Offer_SubParentDiv {
-                  padding-left: 1rem !important;
-              }
-          }
-
-          h2 {
-              margin-left: unset !important;
-              padding-left: 1rem !important;
-          }
-
-          .content {
-              p {
-                  margin-left: 0.5rem !important;
-              }
-          }
+    .quality-fuels-and-security {
+      .Explore_Cusomer_Offer_firstDiv {
+        .Explore_Cusomer_Offer_SubParentDiv {
+          padding-left: 1rem !important;
+        }
       }
+
+      h2 {
+        margin-left: unset !important;
+        padding-left: 1rem !important;
+      }
+
+      .content {
+        p {
+          margin-left: 0.5rem !important;
+        }
+      }
+    }
   }
 
   #banner-section {
     .banner {
-      .background-banner-img { 
+      .background-banner-img {
         .content {
           right: 10%;
-          bottom: 36%;  
+          bottom: 36% !important;
         }
       }
-    } 
+    }
   }
-  #top-common-header{
-    .topheader{
-      .navbar{
-        .nav-item{
-          font-size:18px !important; 
+
+  #top-common-header {
+    .topheader {
+      .navbar {
+        .nav-item {
+          font-size: 18px !important;
           padding: 5px 5px;
         }
       }
-    } 
+    }
   }
+
   #banner-section {
     .banner {
       .background-banner-img {
         .content {
           right: 10%;
           bottom: 30%;
-      }
+        }
       }
     }
   }
 }
- 
 
- 
+@media only screen and (min-width : 1360px) and (max-width : 1400px) {
+  #top-common-header {
+    .topheader {
+      .navbar {
+        .nav-item {
+          font-size: 18px !important;
+          padding: 5px 5px;
+        }
+      }
+    }
+  }
+
+  #banner-section {
+    .banner {
+      .background-banner-img .content {
+        right: 10%;
+        bottom: 23%;
+      }
+    }
+  }
+
+  #from-refinery-to-forecourt-section {
+    .Explore_Cusomer_Offer_firstDiv {
+      .Explore_Cusomer_Offer_SubParentDiv {
+        .Explore_Cusomer_Offer_horizontal_line {
+          width: 72% !important;
+        }
+      }
+    }
+
+    h2 {
+      padding-left: 0rem !important;
+    }
+  }
+
+  #added-value-across-section {
+    .added-value-across {
+    .Explore_Cusomer_Offer_firstDiv{
+    padding-left: unset !important;
+    }
+    }
+    .supply-chain{
+      margin-left: 0px !important;
+    }
+  }
+  .quality-fuels-and-security-section{
+    .quality-fuels-and-security{
+      .Explore_Cusomer_Offer_firstDiv{
+        .Explore_Cusomer_Offer_SubParentDiv{
+          padding-left: 0.5rem !important;
+        }
+      } 
+      .content{
+        padding-left: 0.5rem !important;
+      }
+    } 
+  } 
+
+}
